@@ -1,5 +1,5 @@
 /*
- * "$Id: config.mingw,v 1.1.2.3.2.8 2002/07/09 17:41:24 easysw Exp $"
+ * "$Id: config.mingw,v 1.1.2.3.2.9 2002/08/05 17:50:24 easysw Exp $"
  *
  * Configuration file for the Fast Light Tool Kit (FLTK).
  *
@@ -205,7 +205,6 @@
 
 /* #undef HAVE_PNG_GET_VALID */
 /* #undef HAVE_PNG_SET_TRNS_TO_ALPHA */
-/* #undef HAVE_PNG_READ_DESTROY */
 
 /*
  * Do we have POSIX threading?
@@ -216,5 +215,5 @@
 
 
 /*
- * End of "$Id: config.mingw,v 1.1.2.3.2.8 2002/07/09 17:41:24 easysw Exp $".
+ * End of "$Id: config.mingw,v 1.1.2.3.2.9 2002/08/05 17:50:24 easysw Exp $".
  */
